--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GoogleMapsExample</string>
+    <string name="map_view">Map View</string>
+    <string name="satellite_view">Satellite view</string>
+    <string name="normal_view">Normal view</string>
 </resources>
